# web_scrap

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: app.py  data.csv  naver_scrap.py
web_scrap/: app.py  naver_scrap.py
