[project]
name = "web-scrap"
version = "0.1.0"
description = ""
authors = [
    {name = "yeongjunkim",email = "pooh97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.29.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "openai (>=1.65.5,<2.0.0)",
    "streamlit (>=1.43.1,<2.0.0)"
]

packages = [
    { include = "src.web_scrap", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
